# MachO2bfuscator

./: .gitignore  CMakeLists.txt  LEARN.md  PLAN.md  README.md  build.sh  run_all_test.sh  simulate.sh  vsa_simulate.sh
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_binary_patcher[1]_include.cmake  test_mach_reader[1]_include.cmake  test_mangler[1]_include.cmake  test_obfuscator[1]_include.cmake  test_objc_extractor[1]_include.cmake  test_symbol_sets[1]_include.cmake
assets/: testckey_objc
include/MachO2bfuscator/: binary_patcher.h  config.h  mach_reader.h  mangler.h  mangling_map.h  obfuscator.h  objc_extractor.h  objc_structs.h  objc_types.h  symbol_sets.h  types.h
include/MachO2fuscator/: binary_patcher.h  mach_reader.h  mangler.h  obfuscator.h  objc_extractor.h  objc_structs.h  objc_types.h  symbol_sets.h  types.h
src/: binary_patcher.cpp  logger.cpp  logger.h  mach_reader.cpp  main.cpp  mangler.cpp  obfuscator.cpp  objc_extractor.cpp  objc_types.cpp  symbol_sets.cpp
src/cli/: cli_parser.cpp  cli_parser.h
src/mangler/: caesar_mangler.cpp  english_top_1000.h  random_mangler.cpp  real_word_mangler.cpp
tests/: CMakeLists.txt  test_binary_patcher.cpp  test_mach_reader.cpp  test_mangler.cpp  test_obfuscator.cpp  test_objc_extractor.cpp  test_symbol_sets.cpp
